--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                     <!-- Hover Content -->
                     <div class="hover-content">
                         <div class="line"></div>
-                        <p>{{ product.price }}</p>
+                        <p>{{ product.price }}₽</p>
                         <h4>{{ product.category }}</h4>
                         <h4>{{ product.name }}</h4>
                     </div>
