--- a/templates/product-details.html
+++ b/templates/product-details.html
@@ -57,21 +57,23 @@
                         <!-- Product Meta Data -->
                         <div class="product-meta-data">
                             <div class="line"></div>
-                            <p class="product-price">{{ product.price }}</p>
+                            <p class="product-price">{{ product.price }}₽</p>
                             <h4>{{ product.name }}</h4>
+
                             <!-- Ratings & Review -->
-                            <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
-                                <div class="ratings">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </div>
-                                <div class="review">
-                                    <a href="#">Write A Review</a>
-                                </div>
-                            </div>
+<!--                            <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">-->
+<!--                                <div class="ratings">-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                </div>-->
+<!--                                <div class="review">-->
+<!--                                    <a href="#">Write A Review</a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+
                             <!-- Avaiable -->
                             {% if product.available %}
                                 <p class="avaibility"><i class="fa fa-circle"></i> In Stock</p>
@@ -87,17 +89,17 @@
                         </div>
 
                         <!-- Add to Cart Form -->
-                        <form class="cart clearfix" method="post">
-                            <div class="cart-btn d-flex mb-50">
-                                <p>Qty</p>
-                                <div class="quantity">
-                                    <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"><i class="fa fa-caret-down" aria-hidden="true"></i></span>
-                                    <input type="number" class="qty-text" id="qty" step="1" min="1" max="300" name="quantity" value="1">
-                                    <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-caret-up" aria-hidden="true"></i></span>
-                                </div>
-                            </div>
-                            <button type="submit" name="addtocart" value="5" class="btn amado-btn">Add to cart</button>
-                        </form>
+<!--                        <form class="cart clearfix" method="post">-->
+<!--                            <div class="cart-btn d-flex mb-50">-->
+<!--                                <p>Qty</p>-->
+<!--                                <div class="quantity">-->
+<!--                                    <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value&#45;&#45;;return false;"><i class="fa fa-caret-down" aria-hidden="true"></i></span>-->
+<!--                                    <input type="number" class="qty-text" id="qty" step="1" min="1" max="300" name="quantity" value="1">-->
+<!--                                    <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-caret-up" aria-hidden="true"></i></span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <button type="submit" name="addtocart" value="5" class="btn amado-btn">Add to cart</button>-->
+<!--                        </form>-->
 
                     </div>
                 </div>
