--- a/templates/shop.html
+++ b/templates/shop.html
@@ -133,7 +133,7 @@
                     <div class="single-product-wrapper">
                         <!-- Product Image -->
                         <div class="product-img">
-                            <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}" width="250" height="150"></a>
+                            <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}"></a>
                             <!-- Hover Thumb -->
 <!--                            <img class="hover-img" src="img/product-img/product2.jpg" alt="">-->
                         </div>
@@ -143,24 +143,27 @@
                             <!-- Product Meta Data -->
                             <div class="product-meta-data">
                                 <div class="line"></div>
-                                <p class="product-price">{{ product.price }}</p>
+                                <p class="product-price">{{ product.price }}₽</p>
                                 <a href="{{ product.get_absolute_url }}">
+                                    <h5>{{ product.category }}</h5>
                                     <h6>{{ product.name }}</h6>
+
                                 </a>
                             </div>
+
                             <!-- Ratings & Cart -->
-                            <div class="ratings-cart text-right">
-                                <div class="ratings">
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </div>
-                                <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="{% static 'img/core-img/cart.png' %}" alt=""></a>
-                                </div>
-                            </div>
+<!--                            <div class="ratings-cart text-right">-->
+<!--                                <div class="ratings">-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                    <i class="fa fa-star" aria-hidden="true"></i>-->
+<!--                                </div>-->
+<!--                                <div class="cart">-->
+<!--                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="{% static 'img/core-img/cart.png' %}" alt=""></a>-->
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
