--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -10,7 +10,7 @@
         {% for product in products %}
             <div class="single-products-catagory clearfix">
                 <a href="{{ product.get_absolute_url }}">
-                    <img src="{{ product.image.url }}" alt="">
+                    <img src="{{ product.image1.url }}" alt="">
                     <!-- Hover Content -->
                     <div class="hover-content">
                         <div class="line"></div>
