--- a/templates/shop/search_result.html
+++ b/templates/shop/search_result.html
@@ -43,9 +43,9 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
-                                <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="{% static 'img/core-img/cart.png' %}" alt=""></a>
-                                </div>
+<!--                                <div class="cart">-->
+<!--                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="{% static 'img/core-img/cart.png' %}" alt=""></a>-->
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
