--- a/templates/shop/shop.html
+++ b/templates/shop/shop.html
@@ -7,12 +7,12 @@
         <!-- ##### Categories Widget ##### -->
         <div class="widget catagory mb-50">
             <!-- Widget Title -->
-            <h6 class="widget-title mb-30">Catagories</h6>
+            <h6 class="widget-title mb-30">Категории</h6>
 
             <!--  Catagories  -->
             <div class="catagories-menu">
                 <ul>
-                    <li><a href="{% url 'product_list' %}">All</a></li>
+                    <li><a href="{% url 'product_list' %}">Все</a></li>
                     {% for category in categories %}
                     <li {% if category.slug == select_category %} class="active" {% endif %} ><a href="{{ category.get_absolute_url }}">{{ category }}</a></li>
 <!--                    <li class="active"><a href="#">Beds</a></li>-->
@@ -41,7 +41,7 @@
         <!-- ##### Price Widget ##### -->
         <div class="widget price mb-50">
     <!-- Widget Title -->
-    <h6 class="widget-title mb-30">Price</h6>
+    <h6 class="widget-title mb-30">Цена</h6>
 
     <div class="widget-desc">
         <form method="get" id="price-form">
@@ -55,7 +55,7 @@
             <input type="hidden" name="price_max" id="price_max" value="{{ request.GET.price_max|default:50000 }}">
 
             <div class="slider-range">
-                <div data-min="100" data-max="50000" data-unit="$"
+                <div data-min="100" data-max="50000" data-unit="₽"
                      class="slider-range-price ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all"
                      data-value-min="{{ request.GET.price_min|default:100 }}"
                      data-value-max="{{ request.GET.price_max|default:50000 }}"
@@ -65,7 +65,7 @@
                     <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
                 </div>
                 <div class="range-price" id="range-price-display">
-                    ${{ request.GET.price_min|default:100 }} - ${{ request.GET.price_max|default:50000 }}
+                    ₽{{ request.GET.price_min|default:100 }} - ₽{{ request.GET.price_max|default:50000 }}
                 </div>
             </div>
         </form>
@@ -81,7 +81,7 @@
                     <div class="product-topbar d-xl-flex align-items-end justify-content-between">
                         <!-- Total Products -->
                         <div class="total-products">
-                            <p>Showing {{ page_obj.start_index }}-{{ page_obj.end_index }} 0f {{ paginator.count }}</p>
+                            <p>Показаны {{ page_obj.start_index }}-{{ page_obj.end_index }} из {{ paginator.count }}</p>
 <!--                            <div class="view d-flex">-->
 <!--                                <a href="#"><i class="fa fa-th-large" aria-hidden="true"></i></a>-->
 <!--                                <a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>-->
@@ -92,14 +92,14 @@
                         <div class="product-sorting">
                             <form method="get" id="main-form" class="d-flex align-items-center">
                                 <div class="sort-by-date d-flex align-items-center me-3">
-                                    <p class="mb-0 me-2">Sort by</p>
+                                    <p class="mb-0 me-2">Сортировать по</p>
                                     <select name="ordering" id="order-by" class="form-select form-select-sm" onchange="document.getElementById('main-form').submit()">
-                                        <option value="price" {% if ordering == "price" %}selected{% endif %}>Price ↑</option>
-                                        <option value="-price" {% if ordering == "-price" %}selected{% endif %}>Price ↓</option>
-                                        <option value="count" {% if ordering == "count" %}selected{% endif %}>Count ↑</option>
-                                        <option value="-count" {% if ordering == "-count" %}selected{% endif %}>Count ↓</option>
-                                        <option value="name" {% if ordering == "name" %}selected{% endif %}>Name A-Z</option>
-                                        <option value="-name" {% if ordering == "-name" %}selected{% endif %}>Name Z-A</option>
+                                        <option value="price" {% if ordering == "price" %}selected{% endif %}>Цена ↑</option>
+                                        <option value="-price" {% if ordering == "-price" %}selected{% endif %}>Цена ↓</option>
+                                        <option value="count" {% if ordering == "count" %}selected{% endif %}>Количество ↑</option>
+                                        <option value="-count" {% if ordering == "-count" %}selected{% endif %}>Количество ↓</option>
+                                        <option value="name" {% if ordering == "name" %}selected{% endif %}>Название A-Z</option>
+                                        <option value="-name" {% if ordering == "-name" %}selected{% endif %}>Название Z-A</option>
 <!--                                        <option value="create" {% if ordering == "create" %}selected{% endif %}>Newest</option>-->
 <!--                                        <option value="-create" {% if ordering == "-create" %}selected{% endif %}>Oldest</option>-->
                                     </select>
@@ -109,7 +109,7 @@
                                 <div class="mx-3"></div>
 
                                 <div class="view-product d-flex align-items-center">
-                                    <p class="mb-0 me-2">View</p>
+                                    <p class="mb-0 me-2">Просмотр</p>
                                     <select name="paginate_by" id="paginate-by" class="form-select form-select-sm" onchange="document.getElementById('main-form').submit()">
                                         <option value="4" {% if paginate_by == '4' %}selected{% endif %}>4</option>
                                         <option value="8" {% if paginate_by == '8' %}selected{% endif %}>8</option>
@@ -133,7 +133,8 @@
                     <div class="single-product-wrapper">
                         <!-- Product Image -->
                         <div class="product-img">
-                            <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}"></a>
+                            <a href="{{ product.get_absolute_url }}"><img src="{{ product.image1.url }}"
+                                                                          alt="{{ product.name }}"></a>
                             <!-- Hover Thumb -->
 <!--                            <img class="hover-img" src="img/product-img/product2.jpg" alt="">-->
                         </div>
@@ -204,31 +205,31 @@
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
 
 <script>
-$(document).ready(function() {
+₽(document).ready(function() {
     // Инициализация слайдера
-    $(".slider-range-price").slider({
+    ₽(".slider-range-price").slider({
         range: true,
         min: 100,
         max: 50000,
         values: [{{ request.GET.price_min|default:100 }}, {{ request.GET.price_max|default:50000 }}],
         slide: function(event, ui) {
             // Обновляем отображение диапазона
-            $("#range-price-display").text("$" + ui.values[0] + " - $" + ui.values[1]);
+            ₽("#range-price-display").text("₽" + ui.values[0] + " - ₽" + ui.values[1]);
 
             // Обновляем значения в скрытых полях
-            $("#price_min").val(ui.values[0]);
-            $("#price_max").val(ui.values[1]);
+            ₽("#price_min").val(ui.values[0]);
+            ₽("#price_max").val(ui.values[1]);
         },
         stop: function(event, ui) {
             // Автоматически отправляем форму при отпускании ползунка
-            $("#price-form").submit();
+            ₽("#price-form").submit();
         }
     });
 
     // Инициализация отображения при загрузке
     var currentMin = {{ request.GET.price_min|default:100 }};
     var currentMax = {{ request.GET.price_max|default:50000 }};
-    $("#range-price-display").text("$" + currentMin + " - $" + currentMax);
+    ₽("#range-price-display").text("₽" + currentMin + " - ₽" + currentMax);
 });
 </script>
 {% endblock %}
