--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -16,7 +16,7 @@
                         <div class="line"></div>
                         <p>{{ product.price }}₽</p>
                         <h4>{{ product.category }}</h4>
-                        <h4>{{ product.name }}</h4>
+                        <h4>{{ product.brand }} {{ product.name }}</h4>
                     </div>
                 </a>
             </div>
